# snd-enhance-toolkit

./: .gitignore  CMakeLists.txt  README.md  changelog.txt  setk_config.example
doc/: changelog.md  setk_config.example
src/: CMakeLists.txt  Makefile  common.c  common.h  config.h  config.h.in  i18n.c  i18n.h  lpc.c  lpc.h  noise_est.c  noise_est.h  setk_config.example  snd_enhance.c  snd_enhance.h  tbessi.c  tbessi.h  toolkit.c  toolkit.h  window.c  window.h
